# C-_Primer

./: CMakeLists.txt  PrimerConfig.h.in  main.cpp
chap3/: CMakeLists.txt
chap3/include/: NumberSysTest.h  structtest.h
chap3/src/: NumberSysTest.cpp  structtest.cpp
chap4/: CMakeLists.txt
chap4/include/: CompundTypes.h  StringOperations.h  StructVariations.h
chap4/src/: CompundTypes.cpp  StringOperations.cpp  StructVariations.cpp
chap5/: CMakeLists.txt
chap5/include/: FileStream.h  FunctionPointer.h  Nested.h  ReadFile.h
chap5/src/: FileStream.cpp  FunctionPointer.cpp  Nested.cpp  ReadFile.cpp
folder/: param2  script.sh
tests/: CMakeLists.txt
tests/include/: Tests.h
tests/src/: Tests.cpp
